# dispenser-server

./: .drone.yml  .gitignore  ChangeLog.md  LICENSE  Makefile  README.md  default.nix  dispenser-server.cabal  dispenser-server.nix  package.yaml  stack.yaml
app/: Main.hs
oldspecs/: FromEventNumberSpec.hs  ServerTestHelpers.hs
sql/: drop_all_test_partitions.ddl.sql
src/Dispenser/: Server.hs
src/Dispenser/Server/: AggDemo.hs  Aggregates.hs  Db.hs  Main.hs  Orphans.hs  Partition.hs  Prelude.hs  Primitives.hs  ResourceTOrphans.hs  StatefulAggregate.hs  StatefulDemo.hs  Types.hs
src/Dispenser/Server/Aggregates/: Partition.hs  PartitionDemo.hs  ZMQ.hs
src/Dispenser/Server/Partition/: Internal.hs
src/Dispenser/Server/Streams/: Batched.hs  Catchup.hs  Event.hs  Push.hs  Resumable.hs
test/: CatchupSpec.hs  EventStreamSpec.hs  FromEventNumberSpec.hs  ServerTestHelpers.hs  StandardTest.hs  TestHelpers.hs
